# mdbook-tsitter

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
example/: book.toml
example/src/: SUMMARY.md  chapter_1.md
example/theme/: tree-sitter.css
examples/languages/: .gitignore  README.md  book.toml  setup.sh
examples/languages/src/: SUMMARY.md  ch1-macaulay2.md  ch2-languages.md  ch3-injection.md  ch4-macaulay2-long.md  ch5-rust-long.md  ch6-comparison.md
examples/languages/theme/: treesitter.css
queries/macaulay2/: highlights.scm
src/: config.rs  grammar.rs  lib.rs  main.rs  markdown.rs  render.rs
