[package]
name = "mdbook-tree-sitter"
version = "0.1.0"
edition = "2021"
description = "An mdBook preprocessor that highlights fenced code blocks with tree-sitter, for any language with a tree-sitter grammar."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexanderGolys/mdbook-tree-sitter"
keywords = ["mdbook", "tree-sitter", "syntax-highlighting", "preprocessor"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[[bin]]
name = "mdbook-tree-sitter"
path = "src/main.rs"

[features]
# Macaulay2 is bundled by default so the preprocessor highlights `m2` blocks
# with zero setup. Any other language is added through `book.toml` config and
# dynamic grammar loading, which is always available. Build with
# `--no-default-features` for a language-agnostic binary that carries no
# grammar of its own.
default = ["macaulay2"]
macaulay2 = ["dep:tree-sitter-macaulay2"]

[dependencies]
mdbook-preprocessor = "0.5"
pulldown-cmark = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
semver = "1"
clap = { version = "4", features = ["derive"] }
libloading = "0.8"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-language = "0.1"

# Bundled default grammars (feature-gated). Adding more is a config concern,
# not a code change — see the `[preprocessor.tree-sitter.languages]` table.
tree-sitter-macaulay2 = { version = "2.4", optional = true }
