[package]
name = "mdbook-treesitter"
version = "0.1.0"
edition = "2021"
description = "An mdBook preprocessor that highlights fenced code blocks with tree-sitter, for any language with a tree-sitter grammar."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexanderGolys/mdbook-treesitter"
keywords = ["mdbook", "tree-sitter", "syntax-highlighting", "preprocessor"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
# Keep example/test books out of the published package — they need external
# parser binaries and queries and only make sense from the git repo.
exclude = ["/examples"]

[[bin]]
name = "mdbook-treesitter"
path = "src/main.rs"

[dependencies]
mdbook-preprocessor = "0.5"
pulldown-cmark = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
semver = "1"
clap = { version = "4", features = ["derive"] }
libloading = "0.8"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-language = "0.1"
